--- a/app/views/neighborhoods/show.html.erb
+++ b/app/views/neighborhoods/show.html.erb
@@ -2,7 +2,7 @@ These are all the murals in <%= @neighborhood.name %>
 
 <ul>
   <% @neighborhood.murals.each do |mural| %>
- <h4 class="artist-title"><%= link_to mural.artist.artist_name, artist_path(mural.artist) %></h4>
-    <li><%= link_to mural.location_details, artist_mural_path(mural.artist, mural) %></li>
+ <li> <span class="artist-title"><%= link_to mural.artist.artist_name, artist_path(mural.artist) %></span> -
+    <%= link_to mural.location_details, artist_mural_path(mural.artist, mural) %></li>
     <% end %>
 </ul>
