--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,7 @@
 
 
 
-<div class="sign-up-form">
+<div class="sign-up- clear-nav">
   Please fill out all the information
   <%= render partial: 'user', locals: { user: @user}  %>
 </div>
